--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "async": "*",
     "express": "*",
+    "geolib": "^2.0.21",
+    "googlemaps": "^1.11.1",
     "pokemon-go-node-api": "^1.2.8",
     "request": "*",
     "socket.io": "^1.4.8"
